Update elyon database data entry software-Copy1.ipynb

--- a/elyon database data entry software-Copy1.ipynb
+++ b/elyon database data entry software-Copy1.ipynb
@@ -322,7 +322,7 @@
     "        conn = mysql.connector.connect(\n",
     "            host=\"127.0.0.1\",\n",
     "            user=\"jaytech\",\n",
-    "            password=\"Shaun@eliana123\",\n",
+    "            password=\"****************\",\n",
     "            database=\"elyon_database\"\n",
     "        )\n",
     "        cursor = conn.cursor()\n",
